init portfolio site

--- a/blog.html
+++ b/blog.html
@@ -2,10 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>Resume</title>
   <link rel="stylesheet" href="reset.css">
   <!-- <link rel="stylesheet" href="./css/bootstrap.css"/> -->
-  <link rel="stylesheet" href="contact-styles.css">
+  <link rel="stylesheet" href="resume-styles.css">  
 </head>
 <body>
   
