nav and footer plus some content

--- a/work.html
+++ b/work.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Library</title>
+    <title>Work</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="library-styles.css">
+    <link rel="stylesheet" href="work-styles.css">
   </head>
   
   <body>
@@ -25,25 +25,45 @@
           <div class="navbar-nav">
             <a class="nav-link" href="index.html">Home</a>  
             <a class="nav-link" href="bio.html">Bio</a> 
-            <a class="nav-link" href="work.html">Work</a> 
+            <a class="nav-link active" aria-current="page" href="#">Work</a> 
             <a class="nav-link" href="places.html">Places</a> 
             <a class="nav-link" href="blog.html">Blog</a> 
-            <a class="nav-link active" aria-current="page" href="#">Library</a> 
+            <a class="nav-link" href="library.html">Library</a> 
           </div>
         </div>
       </div>
     </nav>
     <div class="nav-buffer"></div>
     <br>
-  
+
     <div class="main-container">
       <div class="container-fluid">
   
-        <article class="banner-text">If you can think—and not make thoughts your aim.</article>
+        <article class="banner-text">If you can meet with Triumph and Disaster <br>
+          And treat those two impostors just the same.</article>
       
       </div>
+
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <article class="banner-text">If you can keep your head when all about you <br> 
+              Are losing theirs and blaming it on you, <br>
+          If you can trust yourself when all men doubt you, <br>
+              But make allowance for their doubting too; <br>
+          If you can wait and not be tired by waiting, <br>
+              Or being lied about, don’t deal in lies, <br>
+          Or being hated, don’t give way to hating, <br>
+              And yet don’t look too good, nor talk too wise:</article>
+          </div>
+          <div class="col-8">
+            <img src="img/lone-oak-tree.jpg" class="img-fluid banner-img" alt="lone oak tree">
+          </div>
+        </div>
+      </div>
+
     </div>
-  
+
     <footer class="container-fluid">
       <p>copyright 2024 | all rights reserved.</p>
     </footer>
