--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,54 @@
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume</title>
-  <link rel="stylesheet" href="reset.css">
-  <!-- <link rel="stylesheet" href="./css/bootstrap.css"/> -->
-  <link rel="stylesheet" href="resume-styles.css">  
-</head>
-<body>
   
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="blog-styles.css">
+  </head>
+  
+  <body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">S</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="index.html">Home</a>  
+            <a class="nav-link" href="bio.html">Bio</a> 
+            <a class="nav-link" href="work.html">Work</a> 
+            <a class="nav-link" href="places.html">Places</a> 
+            <a class="nav-link active" aria-current="page" href="#">Blog</a> 
+            <a class="nav-link" href="library.html">Library</a> 
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="nav-buffer"></div>
+    <br>
+  
+    <div class="main-container">
+      <div class="container-fluid">
+  
+        <article class="banner-text">If you can bear to hear the truth you’ve spoken <br>
+          Twisted by knaves to make a trap for fools.</article>
+      
+      </div>
+    </div>
+  
+    <footer class="container-fluid">
+      <p>copyright 2024 | all rights reserved.</p>
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
