--- a/index.html
+++ b/index.html
@@ -5,46 +5,63 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="reset.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="index.html">S</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="bio.html">Bio</a>
-          <a class="nav-link" href="blog.html">Blog</a>
-          <a class="nav-link" href="library.html">Library</a>
-          <a class="nav-link" href="gallery.html">Gallery</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link active" aria-current="page" href="#">Home</a>  
+          <a class="nav-link" href="bio.html">Bio</a> 
+          <a class="nav-link" href="work.html">Work</a> 
+          <a class="nav-link" href="places.html">Places</a> 
+          <a class="nav-link" href="blog.html">Blog</a> 
+          <a class="nav-link" href="library.html">Library</a> 
         </div>
       </div>
     </div>
   </nav>
+  <div class="nav-buffer"></div>
   <br>
 
-  <div class="container-fluid">
-    <div class="parallax-1"></div>
-    <h2 >West Texas</h2>
-    <div id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-    <div class="parallax-2"></div>
-    <h2>Shanghai</h2>
-    <div id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-    <div class="parallax-3"></div>
-    <h2>Washington DC</h2>
-    <div id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-    <div class="parallax-4"></div>
-    <h2>Austin</h2>
-    <div id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+  <div class="main-container">
+
+    <div class="overlay-content">
+      <article class="overlay-text banner-text">If you can keep your head when all about you <br> 
+        Are losing theirs and blaming it on you, <br>
+    If you can trust yourself when all men doubt you, <br>
+        But make allowance for their doubting too; <br>
+    If you can wait and not be tired by waiting, <br>
+        Or being lied about, don’t deal in lies, <br>
+    Or being hated, don’t give way to hating, <br>
+        And yet don’t look too good, nor talk too wise:</article>
+        <img src="/img/lone-oak-tree.jpg" class="img-fluid" alt="lone oak tree">  
+      <!-- <div class="parallax lone-oak-img"></div> -->
+    </div>
+
+
+
+
+
+    <div class="container-fluid">
+
+      
     
+    </div>
   </div>
 
-
+  <footer class="container-fluid">
+    <p>copyright 2024 | all rights reserved.</p>
+  </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
