added images and draft version of all pages

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="blog-styles.css">
   </head>
   
@@ -24,11 +24,11 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" href="index.html">Home</a>  
-            <a class="nav-link" href="bio.html">Bio</a> 
+            <a class="nav-link" href="bio.html">Biography</a> 
             <a class="nav-link" href="work.html">Work</a> 
             <a class="nav-link" href="places.html">Places</a> 
-            <a class="nav-link active" aria-current="page" href="#">Blog</a> 
             <a class="nav-link" href="library.html">Library</a> 
+            <a class="nav-link active" aria-current="page" href="#">Blog</a> 
           </div>
         </div>
       </div>
@@ -43,6 +43,10 @@
           Twisted by knaves to make a trap for fools.</article>
       
       </div>
+    </div>
+
+    <div class="substack-embed">
+      <h2>Placeholder for Substack embed.</h2>
     </div>
   
     <footer class="container-fluid">
