--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>  
-          <a class="nav-link" href="bio.html">Bio</a> 
+          <a class="nav-link" href="bio.html">Biography</a> 
           <a class="nav-link" href="work.html">Work</a> 
           <a class="nav-link" href="places.html">Places</a> 
-          <a class="nav-link" href="blog.html">Blog</a> 
           <a class="nav-link" href="library.html">Library</a> 
+          <a class="nav-link" href="blog.html">Blog</a> 
         </div>
       </div>
     </div>
@@ -36,27 +36,21 @@
   <div class="main-container">
 
     <div class="overlay-content">
-      <article class="overlay-text banner-text">If you can keep your head when all about you <br> 
-        Are losing theirs and blaming it on you, <br>
-    If you can trust yourself when all men doubt you, <br>
-        But make allowance for their doubting too; <br>
-    If you can wait and not be tired by waiting, <br>
-        Or being lied about, don’t deal in lies, <br>
-    Or being hated, don’t give way to hating, <br>
-        And yet don’t look too good, nor talk too wise:</article>
-        <img src="/img/lone-oak-tree.jpg" class="img-fluid" alt="lone oak tree">  
-      <!-- <div class="parallax lone-oak-img"></div> -->
+      <div class="overlay-text">
+        <div class="row">
+          <div class="col-5 text">
+          </div>
+          <div class="col-7 image">
+            <h2>John Smith</h2>
+            <p>Public school autodidact.<br>
+              Traveller and adventurer.<br>
+              Aspiring reneassaince man and entreprener.</p>
+          </div>
+        </div>
+      </div>
+      <div class="parallax lone-oak-img"></div>  
     </div>
 
-
-
-
-
-    <div class="container-fluid">
-
-      
-    
-    </div>
   </div>
 
   <footer class="container-fluid">
