--- a/library.html
+++ b/library.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="library-styles.css">
   </head>
   
@@ -24,11 +24,11 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" href="index.html">Home</a>  
-            <a class="nav-link" href="bio.html">Bio</a> 
+            <a class="nav-link" href="bio.html">Biography</a> 
             <a class="nav-link" href="work.html">Work</a> 
             <a class="nav-link" href="places.html">Places</a> 
-            <a class="nav-link" href="blog.html">Blog</a> 
             <a class="nav-link active" aria-current="page" href="#">Library</a> 
+            <a class="nav-link" href="blog.html">Blog</a> 
           </div>
         </div>
       </div>
@@ -37,11 +37,57 @@
     <br>
   
     <div class="main-container">
-      <div class="container-fluid">
-  
-        <article class="banner-text">If you can think—and not make thoughts your aim.</article>
       
+      <div class="container-fluid">
+        <article class="banner-text">If you can think—and not make thoughts your aim.</article>
       </div>
+
+      <div class="overlay-content">
+        <div class="overlay-text">
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/library/illiad.jpg" class="d-block w-100" alt="illiad">
+              </div>
+              <div class="carousel-item">
+                <img src="img/library/odyssey.jpg" class="d-block w-100" alt="odyssey">
+              </div>
+              <div class="carousel-item">
+                <img src="img/library/aeneid.jpeg" class="d-block w-100" alt="aeneid">
+              </div>
+              <div class="carousel-item">
+                <img src="img/library/wealth-of-nations.jpg" class="d-block w-100" alt="wealth-of-nations">
+              </div>
+              <div class="carousel-item">
+                <img src="img/library/crime-and-punishment.jpg" class="d-block w-100" alt="crime-and-punishment">
+              </div>
+              <div class="carousel-item">
+                <img src="img/library/war-and-peace.jpg" class="d-block w-100" alt="war-and-peace">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        </div>
+        <div class="parallax library-img"></div>  
+      </div>
+
+
+
+
+
+
+
+
+
+
     </div>
   
     <footer class="container-fluid">
