updated footer and book cover opacity

--- a/blog.html
+++ b/blog.html
@@ -39,8 +39,8 @@
     <div class="main-container">
       <div class="container-fluid">
   
-        <article class="banner-text">If you can bear to hear the truth you’ve spoken <br>
-          Twisted by knaves to make a trap for fools.</article>
+        <blockquote class="banner-text">"If you can bear to hear the truth you’ve spoken <br>
+          Twisted by knaves to make a trap for fools."</blockquote>
       
       </div>
     </div>
