--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="col-7 image">
             <h2>John Smith</h2>
-            <p>Public school autodidact.<br>
+            <p>Autodidact.<br>
               Traveller and adventurer.<br>
               Aspiring reneassaince man and entreprener.</p>
           </div>
