--- a/library.html
+++ b/library.html
@@ -39,7 +39,7 @@
     <div class="main-container">
       
       <div class="container-fluid">
-        <article class="banner-text">If you can think—and not make thoughts your aim.</article>
+        <blockquote class="banner-text">"If you can think—and not make thoughts your aim."</blockquote>
       </div>
 
       <div class="overlay-content">
