--- a/places.html
+++ b/places.html
@@ -23,10 +23,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link"  href="index.html">Home</a>  
+            <a class="nav-link" href="index.html">Home</a>  
             <a class="nav-link" href="bio.html">Biography</a> 
             <a class="nav-link" href="work.html">Work</a> 
-            <a class="nav-link" aria-current="page" href="#">Places</a> 
+            <a class="nav-link active" aria-current="page" href="#">Places</a> 
             <a class="nav-link" href="library.html">Library</a> 
             <a class="nav-link" href="blog.html">Blog</a> 
           </div>
