--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
                 <img src="img/shaanxi-normal-university.jpg" alt="shaanxi-normal-seal">
               </span>
               <span style="--i: 3">
-                <img src="img/hku-shield.jpeg" alt="hku-shield">
+                <img src="img/hku-shield.jpeg" alt="hku-logo">
               </span>
               <span style="--i: 4">
                 <img src="img/jicocity-logo-1.jpeg" alt="jigocity-logo">
@@ -80,7 +80,7 @@
                 <img src="img/nike-china.jpeg" alt="nike-china">
               </span>
               <span style="--i: 7">
-                <img src="img/hopkins-nanjing-center-logo.png" alt="hnc-logo">
+                <img src="img/hnc-logo-2.jpeg" alt="hnc-logo">
               </span>
               <span style="--i: 8">
                 <img src="img/sais-logo.jpeg" alt="sais-logo">
