--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           <div class="col-5 text">
           </div>
           <div class="col-7 image">
-            <h2>John Smith</h2>
+            <h2>John Doe</h2>
             <p>Autodidact.<br>
               Traveller and adventurer.<br>
-              Aspiring reneassaince man and entreprener.</p>
+              Aspiring reneassaince man and entrepreneur.</p>
           </div>
         </div>
       </div>
